edit README and fixed layout bugs

--- a/src/pages/Destination.module.scss
+++ b/src/pages/Destination.module.scss
@@ -61,7 +61,7 @@
 }
 
 .pic {
-  min-width: 17rem;
+  max-width: 40rem;
   width: 50%;
   align-self: center;
 
